# CrisOptix

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: FindOptiX.cmake
data/: .gitignore  dds2png.py
include/: CuBufferView.h  DeviceBuffer.h  Log.h  OutputBuffer.h  Window.h  config.h  custom_assert.h  glsl.h
include/graph/: Camera.h  CuBufferView.h  CuEvent.h  DeviceBuffer.h  Interaction.h  LaunchParams.h  OutputBuffer.h  Path.h  Pipeline.h  Renderer.h  Reservoir.h  Scene.h  ShaderBindingTable.h  SimpleRenderer.h  TraceParameters.h  Window.h  brdf.h  conditional_restir.h  luminance.h  path_functions.h  restir_di.h  sample_emitter.h  trace.h
include/graph/restir/: LastVertexState.h  PathReservoir.h  PrefixAccelStruct.h  PrefixEntryResult.h  PrefixGBuffer.h  PrefixPath.h  PrefixSearchPayload.h  Reconnection.h  Reservoir.h  RestirGBuffer.h  RestirParams.h  ShfitResult.h  SuffixPath.h  conditional_restir.h  helper.h  path_gen.h  prefix_reuse.h  ris_helper.h  settings.h  subpath_reuse.h  suffix_reuse.h
include/graph/restir/pass/: prefix_produce_retrace.h  prefix_resampling.h  prefix_retrace.h  spatial_suffix_reuse.h  temporal_suffix_reuse.h  trace_new_suffixes.h
include/graph/restir/struct/: ConditionalRestirData.h  LastVertexState.h  PathReconInfo.h  PathReplayInfo.h  PathReservoir.h  PathRisState.h  PathState.h  PrefixGBuffer.h  PrefixPath.h  PrefixReservoir.h  ReconData.h  Reconnection.h  Reservoir.h  RestirParams.h  RestirPathFlags.h  SuffixPath.h
include/kernel/: tonemap.h
include/model/: Emitter.h  Material.h  Mesh.h  Model.h  ModelInstance.h  Scene.h  Texture.h  Vertex.h
include/util/: Log.h  custom_assert.h  f16.h  glm_cuda.h  glsl.h  math.h  pixel_index.h  random.h  read_file.h  shader_util.h
shader/: accum.cu  brdf.cu  final_gather.cu  hit.cu  mesh_hit.cu  miss.cu  prefix_gen_temp_reuse.cu  prefix_search_hit.cu  prefix_spatial_reuse.cu  prefix_store_entries.cu  suffix_gen_temp_reuse.cu  suffix_spatial_reuse.cu  test.cu
src/: Camera.cpp  CuEvent.cpp  Emitter.cpp  Log.cpp  Material.cpp  Mesh.cpp  Model.cpp  ModelInstance.cpp  Pipeline.cpp  PrefixAccelStruct.cpp  Renderer.cpp  Scene.cpp  ShaderBindingTable.cpp  SimpleRenderer.cpp  Texture.cpp  Window.cpp  glsl.cpp  main.cpp  main.cu  read_file.cpp  tonemap.cu
src/kernel/: tonemap.cu
